--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/core": "^7.12.9",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
+    "@prisma/client": "^2.12.1",
     "dotenv": "^8.2.0",
     "graphql-tools": "^7.0.2",
     "graphql-yoga": "^1.18.3",
@@ -16,5 +17,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec babel-node src/server.js"
+  },
+  "devDependencies": {
+    "@prisma/cli": "2.12.1"
   }
 }
